--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         </h2>
       </div>
       <div class="w-100  pa3 mt2 ">
-        <form action="sign-up_submit" method="get" accept-charset="utf-8">
+        <form action="sign-up_submit" method="get" accept-charset="utf-8" netlify-honeypot="bot-field" netlify>
+          <p class="hidden">
+            <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
+          </p>
           <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
             <legend class="ph0 mh0 fw6 clip">Join Us</legend>
             <div class="mt3 flex flex-column items-center">
