fixed form issues

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </h2>
       </div>
       <div class="w-100  pa3 mt2 ">
-        <form action="sign-up_submit" method="get" accept-charset="utf-8" netlify-honeypot="bot-field" netlify>
+        <form action="sign-up_submit" method="post"  action="/thanks.html" accept-charset="utf-8" netlify-honeypot="bot-field" netlify>
           <p class="hidden">
             <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
           </p>
