styling + added font

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Creative Activists</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/tachyons/4.11.1/tachyons.min.css'>
+  <link rel="stylesheet" href="https://use.typekit.net/eol6kdu.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,12 +26,12 @@
           </p>
           <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
             <legend class="ph0 mh0 fw6 clip">Join Us</legend>
-            <div class="mt3 flex flex-column items-center">
+            <div class=" flex flex-column items-center">
               <input class="pa2 input-reset ba bw1 bg-transparent w-100 measure" placeholder="Your e-mail goes here"
                 type="email" name="email-address" id="email-address">
             </div>
           </fieldset>
-          <div class=" mt3 flex flex-column items-center ">
+          <div class=" mt5 flex flex-column items-center ">
             <div class="svg-wrapper">
               <svg height="60" width="320" xmlns="http://www.w3.org/2000/svg">
                 <rect class="shape" height="60" width="320" />
