added required for input field

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
             <legend class="ph0 mh0 fw6 clip">Join Us</legend>
             <div class=" flex flex-column items-center">
-              <input class="pa2 input-reset ba bw1 bg-transparent w-100 measure" placeholder="Your e-mail goes here"
+              <input required class="pa2 input-reset ba bw1 bg-transparent w-100 measure" placeholder="Your e-mail goes here"
                 type="email" name="email-address" id="email-address">
             </div>
           </fieldset>
