--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="https://use.typekit.net/eol6kdu.css">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <div class="vh-100 flex items-center schemeOne">
+<body class="schemeOne">
+  <div class="vh-100 flex items-center ">
     <div class="flex flex-column items-center w-100">
       <div class="w-100 pa3 mt2">
         <h1>we are <span>Creative Activists</span></h1>
