--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="schemeOne">
-  <div class="vh-100 flex items-center ">
+  <div class="container flex items-center ">
     <div class="flex flex-column items-center w-100">
       <div class="w-100 pa3 mt2">
         <h1>we are <span>Creative Activists</span></h1>
