a bit more responsive

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <h1>we are <span>Creative Activists</span></h1>
       </div>
       <div class="w-100 pa3 mt2">
-        <h2>
+        <h2 class="">
           We make the world a better place
           <br /> by using our creative superpowers as a force for good
         </h2>
       </div>
-      <div class="w-100  pa3 mt2 ">
+      <div class="w-100  pa3 mt2">
         <form action="/thanks.html" method="post" accept-charset="utf-8" netlify-honeypot="bot-field" netlify>
           <p class="hidden">
             <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
