added more explanatory text and styling

--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Creative Activists</title>
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/tachyons/4.11.1/tachyons.min.css'>
-  <link rel="stylesheet" href="https://use.typekit.net/eol6kdu.css">
-  <link rel="stylesheet" href="style.css">
+  <link
+    rel='stylesheet'
+    href='https://cdnjs.cloudflare.com/ajax/libs/tachyons/4.11.1/tachyons.min.css'
+  >
+  <link
+    rel="stylesheet"
+    href="https://use.typekit.net/eol6kdu.css"
+  >
+  <link
+    rel="stylesheet"
+    href="style.css"
+  >
 </head>
+
 <body class="schemeOne">
   <div class="container flex items-center ">
     <div class="flex flex-column items-center w-100">
@@ -14,29 +25,81 @@
         <h1>we are <span>Creative Activists</span></h1>
       </div>
       <div class="w-100 pa3 mt2">
-        <h2 class="">
-          We make the world a better place
-          <br /> by using our creative superpowers as a force for good
-        </h2>
+        <p class="introduction">
+          <span class="bold">Creative Activists</span> is een netwerkplatform voor <span class="bold">creatieve
+            freelancers</span>s die een <span class="bold">positieve(re) impact</span> willen hebben met hun werk. We
+          willen hen <span class="bold">connecteren</span>, <span class="bold">activeren</span> en <span class="bold">inspireren</span>.
+          <span class="italic">We work for good, not merely for food.</span>
+        </p>
+        <br />
+        <h2>Waarom?</h2>
+
+        <p>Creative Activists is een matchmaker, deeltjesversneller en community builder. We willen freelancers met
+          eenzelfde maatschappelijke drijfveer helpen om op een snelle manier complementaire teams te vormen of
+          gezamenlijke missies op te zetten. Van tijdelijke duo’s tot vaste collectieven, van kleine acties tot
+          grootschalige trajecten. Whatever makes it work better.</p>
+
+        <h2>Hoe kan jij helpen?</h2>
+
+        <p>We practice what we preach. En dus betrekken we jou van begin af aan bij ons project, om samen zoveel
+          mogelijk impact te kunnen maken. Het voortraject en vooronderzoek zijn opgestart, en binnenkort beginnen we
+          te bouwen aan de eerste prototypes van het platform.</p>
+
+        <p>Jouw mening, wensen, noden en feedback zijn van onschatbare waarde. Want voor jou doen we het, toch? Deel
+          je
+          mening en/of geef je op als proefkonijn via <a
+            href="https://friendlyinternet.typeform.com/to/a8Mbd2"
+            target="_blank"
+            class="link"
+          >deze vragenlijst</a>.</p>
+
       </div>
+
       <div class="w-100  pa3 mt2">
-        <form action="/thanks.html" method="post" accept-charset="utf-8" netlify-honeypot="bot-field" netlify>
+        <form
+          action="/thanks.html"
+          method="post"
+          accept-charset="utf-8"
+          netlify-honeypot="bot-field"
+          netlify
+        >
           <p class="hidden">
             <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
           </p>
-          <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
+          <fieldset
+            id="sign_up"
+            class="ba b--transparent ph0 mh0"
+          >
             <legend class="ph0 mh0 fw6 clip">Join Us</legend>
             <div class=" flex flex-column items-center">
-              <input required class="pa2 input-reset ba bw1 bg-transparent w-100 measure" placeholder="Your e-mail goes here"
-                type="email" name="email-address" id="email-address">
+              <input
+                required
+                class="pa2 input-reset ba bw1 bg-transparent w-100 measure"
+                placeholder="Your e-mail goes here"
+                type="email"
+                name="email-address"
+                id="email-address"
+              >
             </div>
           </fieldset>
           <div class=" mt5 flex flex-column items-center ">
             <div class="svg-wrapper">
-              <svg height="60" width="320" xmlns="http://www.w3.org/2000/svg">
-                <rect class="shape" height="60" width="320" />
+              <svg
+                height="60"
+                width="320"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <rect
+                  class="shape"
+                  height="60"
+                  width="320"
+                />
                 <div class="text flex flex-column items-center">
-                  <input class="textinput-reset ba bg-transparent grow pointer f6" type="submit" value="JOIN US">
+                  <input
+                    class="textinput-reset ba bg-transparent grow pointer f6"
+                    type="submit"
+                    value="JOIN US"
+                  >
                 </div>
               </svg>
             </div>
@@ -46,4 +109,5 @@
     </div>
   </div>
 </body>
+
 </html>
