First draft new design and content

--- a/index.html
+++ b/index.html
@@ -18,95 +18,195 @@
   >
 </head>
 
-<body class="schemeOne">
-  <div class="container flex items-center ">
-    <div class="flex flex-column items-center w-100">
+<body>
+  <div class="container flex flex-column items-center ">
+
+    <!-- <nav>
+      <ul>
+        <li><a href="#waarom">Waarom</a></li>
+      </ul>
+    </nav> -->
+    <section class="colorOne flex flex-column items-center w-100">
       <div class="w-100 pa3 mt2">
         <h1>we are <span>Creative Activists</span></h1>
       </div>
-      <div class="w-100 pa3 mt2">
-        <p class="introduction">
-          <span class="bold">Creative Activists</span> is een netwerkplatform voor <span class="bold">creatieve
-            freelancers</span>s die een <span class="bold">positieve(re) impact</span> willen hebben met hun werk. We
-          willen hen <span class="bold">connecteren</span>, <span class="bold">activeren</span> en <span class="bold">inspireren</span>.
-          <span class="italic">We work for good, not merely for food.</span>
+      <div class="w-100 pa3 mt2 flex flex-column items-center w-100">
+        <p class="w-80 w-100-m w-100-s">
+          Een (inter)nationaal platform voor <span class="bold">creatieve freelancers</span> die een <span
+            class="bold">positieve(re) impact</span> willen hebben met hun werk. Een <span
+            class="bold">deeltjesversneller</span> die hen <span class="bold">connecteert</span>, <span
+            class="bold">activeert</span> en <span class="bold">inspireert</span>. <span class="italic">We work for
+            good, not merely for food</span>.
         </p>
-        <br />
-        <h2>Waarom?</h2>
 
-        <p>Creative Activists is een matchmaker, deeltjesversneller en community builder. We willen freelancers met
-          eenzelfde maatschappelijke drijfveer helpen om op een snelle manier complementaire teams te vormen of
-          gezamenlijke missies op te zetten. Van tijdelijke duo’s tot vaste collectieven, van kleine acties tot
-          grootschalige trajecten. Whatever makes it work better.</p>
-
-        <h2>Hoe kan jij helpen?</h2>
-
-        <p>We practice what we preach. En dus betrekken we jou van begin af aan bij ons project, om samen zoveel
-          mogelijk impact te kunnen maken. Het voortraject en vooronderzoek zijn opgestart, en binnenkort beginnen we
-          te bouwen aan de eerste prototypes van het platform.</p>
-
-        <p>Jouw mening, wensen, noden en feedback zijn van onschatbare waarde. Want voor jou doen we het, toch? Deel
-          je
-          mening en/of geef je op als proefkonijn via <a
-            href="https://friendlyinternet.typeform.com/to/a8Mbd2"
-            target="_blank"
-            class="link"
-          >deze vragenlijst</a>.</p>
-
-      </div>
-
-      <div class="w-100  pa3 mt2">
-        <form
-          action="/thanks.html"
-          method="post"
-          accept-charset="utf-8"
-          netlify-honeypot="bot-field"
-          netlify
-        >
-          <p class="hidden">
-            <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
-          </p>
-          <fieldset
-            id="sign_up"
-            class="ba b--transparent ph0 mh0"
+        <div class="w-100  pa3 mt2">
+          <form
+            action="/thanks.html"
+            method="post"
+            accept-charset="utf-8"
+            netlify-honeypot="bot-field"
+            netlify
           >
-            <legend class="ph0 mh0 fw6 clip">Join Us</legend>
-            <div class=" flex flex-column items-center">
-              <input
-                required
-                class="pa2 input-reset ba bw1 bg-transparent w-100 measure"
-                placeholder="Your e-mail goes here"
-                type="email"
-                name="email-address"
-                id="email-address"
-              >
-            </div>
-          </fieldset>
-          <div class=" mt5 flex flex-column items-center ">
-            <div class="svg-wrapper">
-              <svg
-                height="60"
-                width="320"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <rect
-                  class="shape"
+            <p class="hidden">
+              <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
+            </p>
+            <fieldset
+              id="sign_up"
+              class="ba b--transparent ph0 mh0"
+            >
+              <legend class="ph0 mh0 fw6 clip">Join Us</legend>
+              <div class=" flex flex-column items-center">
+                <input
+                  required
+                  class="pa2 input-reset ba bw1 bg-transparent w-100 measure"
+                  placeholder="Your e-mail"
+                  type="email"
+                  name="email-address"
+                  id="email-address"
+                >
+              </div>
+            </fieldset>
+
+            <div class=" mt5 flex flex-column items-center ">
+              <div class="svg-wrapper">
+                <svg
                   height="60"
                   width="320"
-                />
-                <div class="text flex flex-column items-center">
-                  <input
-                    class="textinput-reset ba bg-transparent grow pointer f6"
-                    type="submit"
-                    value="JOIN US"
-                  >
-                </div>
-              </svg>
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <rect
+                    class="shape"
+                    height="60"
+                    width="320"
+                  />
+                  <div class="text flex flex-column items-center">
+                    <input
+                      class="textinput-reset ba bg-transparent grow pointer f6"
+                      type="submit"
+                      value="JOIN US"
+                    >
+                  </div>
+                </svg>
+              </div>
             </div>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
-    </div>
+    </section>
+
+    <section class="flex flex-column items-center w-100 ">
+      <div class="flex flex-column items-center w-100 ">
+        <h2>WAT IS ONS DOEL?</h2>
+        <p class="w-80 w-100-m w-100-s">Creative Activists is een <span class="bold">matchmaker</span> en <span
+            class="bold"
+          >community
+            builder</span>.
+          We willen freelancers met eenzelfde maatschappelijke
+          drijfveer helpen om op een snelle manier <span class="bold">complementaire teams</span> te vormen of <span
+            class="bold"
+          >gezamenlijke missies</span> op te zetten.
+          Van tijdelijke duo’s tot vaste collectieven, van kleine acties tot grootschalige trajecten.
+        </p>
+      </div>
+    </section>
+
+    <section class="colorTwo w-100 cf">
+      <div class="fl w-100 w-50-m w-25-l tc pv4">
+        <h3>COLLECT</h3>
+        <p>
+          creatieve freelancers met <span class="bold">dezelfde positieve drijfveer</span> samenbrengen op één platform
+        </p>
+      </div>
+      <div class="fl w-100 w-50-m w-25-l tc pv4">
+        <h3>CONNECT</h3>
+        <p> waardevolle <span class="bold">connecties en interacties</span> faciliteren
+        </p>
+      </div>
+      <div class="fl w-100 w-50-m w-25-l tc pv4">
+        <h3>EMPOWER</h3>
+        <p>onderling <span class="bold">kennis en inzichten delen, groeien</span> als freelancer en als actieve
+          burger/mens</p>
+      </div>
+      <div class="fl w-100 w-50-m w-25-l tc pv4">
+        <h3>ACTIVATE</h3>
+        <p>samen <span class="bold">teams vormen</span> en/of <span class="bold">projecten realiseren</span></p>
+      </div>
+    </section>
+
+
+    <section class="flex flex-column items-center w-100 ">
+      <div class="flex flex-column items-center w-100 ">
+        <h2>VOOR WIE?</h2>
+        <p class="w-80 w-100-m w-100-s">
+          <span class="bold">Creatieve freelancers</span> vormen de kern van onze community, omdat we geloven in
+          nieuwe vormen van werken en tijdelijke teamstructuren. We geloven in creativiteit als multi-inzetbare skill
+          van de toekomst. De term ‘creativiteit’ is dan ook ruim interpreteerbaar, nooit beperkend.</p>
+        <p>
+          Onze creatieve profielen variëren van studioprofielen als graphic designers, art directors, copywriters en
+          communicatieexperts tot bredere profielen als game designers, gedragsontwerpers, stadsontwikkelaars en
+          presentatoren.Wat ons bindt is ons gezamenlijk doel: sociale impact maken, met en voor klanten die hetzelfde
+          nastreven.
+
+        </p>
+      </div>
+    </section>
+
+
+    <section class="colorOne flex flex-column items-center w-100 ">
+      <div class="flex flex-column items-center w-100 ">
+        <h2>WAAROM NU?</h2>
+        <p class="w-80 w-100-m w-100-s">
+          Creative Activists is het vervolgverhaal van <a
+            class="link underline-hover"
+            href="https://wearetribe.be/"
+            target="_blank"
+          >We Are Tribe</a>, waarmee we de opzet van ons eigen collectief gelijktijdig willen bewaken én openstellen
+          voor andere geïnteresseerden. We starten het platform eerst op in <span class="bold">Vlaanderen</span>, maar
+          werken samen met <span class="bold">Europese</span> en <span class="bold">internationale partners</span> als
+          <a
+            class="link underline-hover"
+            href="https://online.unschools.co/courses/disrupt-design-gang"
+            target="_blank"
+          >The Disruptive Design Gang</a>, <a
+            class="link underline-hover"
+            href="https://www.plusacumen.org/"
+            target="_blank"
+          >+Acumen</a> en anderen om onze lokale en globale impact te vergroten.
+
+        </p>
+      </div>
+    </section>
+
+
+    <section class=" flex flex-column items-center w-100 ">
+      <div class="flex flex-column items-center w-100 ">
+        <h2>WAAR STAAN WE AL?</h2>
+        <p class="w-80 w-100-m w-100-s">
+          <span class="italic">We practice what we preach</span>. En dus betrekken we jullie van begin af aan bij ons
+          project. Het voortraject en
+          vooronderzoek zijn opgestart, we stuurden een vragenlijst uit naar meer dan 100 creatieve freelancers en
+          bouwen
+          intussen aan het eerste prototype van het platform. We willen zo snel mogelijk een eerste versie lanceren en
+          bouwen
+          het platform daarna samen verder uit.
+
+        </p>
+      </div>
+    </section>
+
+    <footer class="w-100 flex justify-between">
+      <p class="pa0">Meer info: <a
+          class="link underline-hover"
+          href="mailto:lien@creativeactivists.eu"
+        >lien@creativeactivists.eu</a></p>
+      <p class="pa0">Powered by <a
+          class="link underline-hover"
+          href="https://wearetribe.be/"
+          target="_blank"
+        >We Are Tribe</a></p>
+    </footer>
+
+
   </div>
 </body>
 
