Responsive design changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   >
 </head>
 
-<body>
+<body class="pa1 pa4-m pa5-l">
   <div class="container flex flex-column items-center ">
 
     <!-- <nav>
@@ -31,7 +31,7 @@
         <h1>we are <span>Creative Activists</span></h1>
       </div>
       <div class="w-100 pa3 mt2 flex flex-column items-center w-100">
-        <p class="w-80 w-100-m w-100-s">
+        <p class="w-80-l w-100-m w-100">
           Een (inter)nationaal platform voor <span class="bold">creatieve freelancers</span> die een <span
             class="bold">positieve(re) impact</span> willen hebben met hun werk. Een <span
             class="bold">deeltjesversneller</span> die hen <span class="bold">connecteert</span>, <span
@@ -97,7 +97,7 @@
     <section class="flex flex-column items-center w-100 ">
       <div class="flex flex-column items-center w-100 ">
         <h2>WAT IS ONS DOEL?</h2>
-        <p class="w-80 w-100-m w-100-s">Creative Activists is een <span class="bold">matchmaker</span> en <span
+        <p class="w-80-l w-100-m w-100">Creative Activists is een <span class="bold">matchmaker</span> en <span
             class="bold"
           >community
             builder</span>.
@@ -137,12 +137,12 @@
     <section class="flex flex-column items-center w-100 ">
       <div class="flex flex-column items-center w-100 ">
         <h2>VOOR WIE?</h2>
-        <p class="w-80 w-100-m w-100-s">
+        <p class="w-80-l w-100-m w-100">
           <span class="bold">Creatieve freelancers</span> vormen de kern van onze community, omdat we geloven in
           nieuwe vormen van werken en tijdelijke teamstructuren. We geloven in creativiteit als multi-inzetbare skill
           van de toekomst. De term ‘creativiteit’ is dan ook ruim interpreteerbaar, nooit beperkend.</p>
-        <p>
-          Onze creatieve profielen variëren van studioprofielen als graphic designers, art directors, copywriters en
+        <p class="w-80-l w-100-m w-100">
+          Onze creatieve profielen variëren van studioprofielen als graphic designers, art directors, copywriters en
           communicatieexperts tot bredere profielen als game designers, gedragsontwerpers, stadsontwikkelaars en
           presentatoren.Wat ons bindt is ons gezamenlijk doel: sociale impact maken, met en voor klanten die hetzelfde
           nastreven.
@@ -160,8 +160,8 @@
             class="link underline-hover"
             href="https://wearetribe.be/"
             target="_blank"
-          >We Are Tribe</a>, waarmee we de opzet van ons eigen collectief gelijktijdig willen bewaken én openstellen
-          voor andere geïnteresseerden. We starten het platform eerst op in <span class="bold">Vlaanderen</span>, maar
+          >We Are Tribe</a>, waarmee we de opzet van ons eigen collectief gelijktijdig willen bewaken én openstellen
+          voor andere geïnteresseerden. We starten het platform eerst op in <span class="bold">Vlaanderen</span>, maar
           werken samen met <span class="bold">Europese</span> en <span class="bold">internationale partners</span> als
           <a
             class="link underline-hover"
