--- a/index.html
+++ b/index.html
@@ -19,13 +19,29 @@
 </head>
 
 <body class="pa1 pa4-m pa5-l">
+
+  <nav>
+    <ul class="flex flex-column h-100 justify-around">
+      <li><a
+          class="link underline-hover"
+          href="#wat"
+        >Wat</a></li>
+      <li><a
+          class="link underline-hover"
+          href="#wie"
+        >Wie</a></li>
+      <li><a
+          class="link underline-hover"
+          href="#waarom"
+        >Waarom</a></li>
+      <li><a
+          class="link underline-hover"
+          href="#waar"
+        >Waar</a></li>
+    </ul>
+  </nav>
   <div class="container flex flex-column items-center ">
 
-    <!-- <nav>
-      <ul>
-        <li><a href="#waarom">Waarom</a></li>
-      </ul>
-    </nav> -->
     <section class="colorOne flex flex-column items-center w-100">
       <div class="w-100 pa3 mt2">
         <h1>we are <span>Creative Activists</span></h1>
@@ -95,7 +111,10 @@
     </section>
 
     <section class="flex flex-column items-center w-100 ">
-      <div class="flex flex-column items-center w-100 ">
+      <div
+        id="wat"
+        class="flex flex-column items-center w-100 "
+      >
         <h2>WAT IS ONS DOEL?</h2>
         <p class="w-80-l w-100-m w-100">Creative Activists is een <span class="bold">matchmaker</span> en <span
             class="bold"
@@ -135,7 +154,10 @@
 
 
     <section class="flex flex-column items-center w-100 ">
-      <div class="flex flex-column items-center w-100 ">
+      <div
+        id="wie"
+        class="flex flex-column items-center w-100 "
+      >
         <h2>VOOR WIE?</h2>
         <p class="w-80-l w-100-m w-100">
           <span class="bold">Creatieve freelancers</span> vormen de kern van onze community, omdat we geloven in
@@ -153,7 +175,10 @@
 
 
     <section class="colorOne flex flex-column items-center w-100 ">
-      <div class="flex flex-column items-center w-100 ">
+      <div
+        id="waarom"
+        class="flex flex-column items-center w-100 "
+      >
         <h2>WAAROM NU?</h2>
         <p class="w-80 w-100-m w-100-s">
           Creative Activists is het vervolgverhaal van <a
@@ -179,7 +204,10 @@
 
 
     <section class=" flex flex-column items-center w-100 ">
-      <div class="flex flex-column items-center w-100 ">
+      <div
+        id="waar"
+        class="flex flex-column items-center w-100 "
+      >
         <h2>WAAR STAAN WE AL?</h2>
         <p class="w-80 w-100-m w-100-s">
           <span class="italic">We practice what we preach</span>. En dus betrekken we jullie van begin af aan bij ons
