Small fix for body bg color

--- a/thanks.html
+++ b/thanks.html
@@ -18,176 +18,178 @@
   >
 </head>
 
-<body class="pa1 pa4-m pa5-l">
+<body>
+  <div class="wrapper pa1 pa4-m pa5-l">
+    <nav>
+      <ul class="flex flex-column h-100 justify-around">
+        <li><a
+            class="link underline-hover"
+            href="#wat"
+          >Wat</a></li>
+        <li><a
+            class="link underline-hover"
+            href="#wie"
+          >Wie</a></li>
+        <li><a
+            class="link underline-hover"
+            href="#waarom"
+          >Waarom</a></li>
+        <li><a
+            class="link underline-hover"
+            href="#waar"
+          >Waar</a></li>
+      </ul>
+    </nav>
+    <div class="container flex flex-column items-center ">
 
-  <nav>
-    <ul class="flex flex-column h-100 justify-around">
-      <li><a
-          class="link underline-hover"
-          href="#wat"
-        >Wat</a></li>
-      <li><a
-          class="link underline-hover"
-          href="#wie"
-        >Wie</a></li>
-      <li><a
-          class="link underline-hover"
-          href="#waarom"
-        >Waarom</a></li>
-      <li><a
-          class="link underline-hover"
-          href="#waar"
-        >Waar</a></li>
-    </ul>
-  </nav>
-  <div class="container flex flex-column items-center ">
-
-    <section class="colorOne flex flex-column items-center w-100">
-      <div class="w-100 pa3 mt2">
-        <h1>we are <span>Creative Activists</span></h1>
-      </div>
-      <div class="w-100 pa3 mt2 flex flex-column items-center w-100">
-        <p class="w-80-l w-100-m w-100">
-          Een (inter)nationaal platform voor <span class="bold">creatieve freelancers</span> die een <span
-            class="bold">positieve(re) impact</span> willen hebben met hun werk. Een <span
-            class="bold">deeltjesversneller</span> die hen <span class="bold">connecteert</span>, <span
-            class="bold">activeert</span> en <span class="bold">inspireert</span>. <span class="italic">We work for
-            good, not merely for food</span>.
-        </p>
-
-        <div class="w-100  pa3 mt2  flex flex-column items-center">
-
-
-          <h3>Leuk!</h3>
+      <section class="colorOne flex flex-column items-center w-100">
+        <div class="w-100 pa3 mt2">
+          <h1>we are <span>Creative Activists</span></h1>
         </div>
-      </div>
-    </section>
+        <div class="w-100 pa3 mt2 flex flex-column items-center w-100">
+          <p class="w-80-l w-100-m w-100">
+            Een (inter)nationaal platform voor <span class="bold">creatieve freelancers</span> die een <span
+              class="bold"
+            >positieve(re) impact</span> willen hebben met hun werk. Een <span class="bold">deeltjesversneller</span>
+            die hen <span class="bold">connecteert</span>, <span class="bold">activeert</span> en <span
+              class="bold">inspireert</span>. <span class="italic">We work for
+              good, not merely for food</span>.
+          </p>
 
-    <section class="flex flex-column items-center w-100 ">
-      <div
-        id="wat"
-        class="flex flex-column items-center w-100 "
-      >
-        <h2>WAT IS ONS DOEL?</h2>
-        <p class="w-80-l w-100-m w-100">Creative Activists is een <span class="bold">matchmaker</span> en <span
-            class="bold"
-          >community
-            builder</span>.
-          We willen freelancers met eenzelfde maatschappelijke
-          drijfveer helpen om op een snelle manier <span class="bold">complementaire teams</span> te vormen of <span
-            class="bold"
-          >gezamenlijke missies</span> op te zetten.
-          Van tijdelijke duo’s tot vaste collectieven, van kleine acties tot grootschalige trajecten.
-        </p>
-      </div>
-    </section>
-
-    <section class="colorTwo w-100 cf">
-      <div class="fl w-100 w-50-m w-25-l tc pv4">
-        <h3>COLLECT</h3>
-        <p>
-          creatieve freelancers met <span class="bold">dezelfde positieve drijfveer</span> samenbrengen op één platform
-        </p>
-      </div>
-      <div class="fl w-100 w-50-m w-25-l tc pv4">
-        <h3>CONNECT</h3>
-        <p> waardevolle <span class="bold">connecties en interacties</span> faciliteren
-        </p>
-      </div>
-      <div class="fl w-100 w-50-m w-25-l tc pv4">
-        <h3>EMPOWER</h3>
-        <p>onderling <span class="bold">kennis en inzichten delen, groeien</span> als freelancer en als actieve
-          burger/mens</p>
-      </div>
-      <div class="fl w-100 w-50-m w-25-l tc pv4">
-        <h3>ACTIVATE</h3>
-        <p>samen <span class="bold">teams vormen</span> en/of <span class="bold">projecten realiseren</span></p>
-      </div>
-    </section>
+          <div class="w-100  pa3 mt2  flex flex-column items-center">
 
 
-    <section class="flex flex-column items-center w-100 ">
-      <div
-        id="wie"
-        class="flex flex-column items-center w-100 "
-      >
-        <h2>VOOR WIE?</h2>
-        <p class="w-80-l w-100-m w-100">
-          <span class="bold">Creatieve freelancers</span> vormen de kern van onze community, omdat we geloven in
-          nieuwe vormen van werken en tijdelijke teamstructuren. We geloven in creativiteit als multi-inzetbare skill
-          van de toekomst. De term ‘creativiteit’ is dan ook ruim interpreteerbaar, nooit beperkend.</p>
-        <p class="w-80-l w-100-m w-100">
-          Onze creatieve profielen variëren van studioprofielen als graphic designers, art directors, copywriters en
-          communicatieexperts tot bredere profielen als game designers, gedragsontwerpers, stadsontwikkelaars en
-          presentatoren.Wat ons bindt is ons gezamenlijk doel: sociale impact maken, met en voor klanten die hetzelfde
-          nastreven.
+            <h3>Leuk!</h3>
+          </div>
+        </div>
+      </section>
 
-        </p>
-      </div>
-    </section>
+      <section class="flex flex-column items-center w-100 ">
+        <div
+          id="wat"
+          class="flex flex-column items-center w-100 "
+        >
+          <h2>WAT IS ONS DOEL?</h2>
+          <p class="w-80-l w-100-m w-100">Creative Activists is een <span class="bold">matchmaker</span> en <span
+              class="bold"
+            >community
+              builder</span>.
+            We willen freelancers met eenzelfde maatschappelijke
+            drijfveer helpen om op een snelle manier <span class="bold">complementaire teams</span> te vormen of <span
+              class="bold"
+            >gezamenlijke missies</span> op te zetten.
+            Van tijdelijke duo’s tot vaste collectieven, van kleine acties tot grootschalige trajecten.
+          </p>
+        </div>
+      </section>
+
+      <section class="colorTwo w-100 cf">
+        <div class="fl w-100 w-50-m w-25-l tc pv4">
+          <h3>COLLECT</h3>
+          <p>
+            creatieve freelancers met <span class="bold">dezelfde positieve drijfveer</span> samenbrengen op één
+            platform
+          </p>
+        </div>
+        <div class="fl w-100 w-50-m w-25-l tc pv4">
+          <h3>CONNECT</h3>
+          <p> waardevolle <span class="bold">connecties en interacties</span> faciliteren
+          </p>
+        </div>
+        <div class="fl w-100 w-50-m w-25-l tc pv4">
+          <h3>EMPOWER</h3>
+          <p>onderling <span class="bold">kennis en inzichten delen, groeien</span> als freelancer en als actieve
+            burger/mens</p>
+        </div>
+        <div class="fl w-100 w-50-m w-25-l tc pv4">
+          <h3>ACTIVATE</h3>
+          <p>samen <span class="bold">teams vormen</span> en/of <span class="bold">projecten realiseren</span></p>
+        </div>
+      </section>
 
 
-    <section class="colorOne flex flex-column items-center w-100 ">
-      <div
-        id="waarom"
-        class="flex flex-column items-center w-100 "
-      >
-        <h2>WAAROM NU?</h2>
-        <p class="w-80 w-100-m w-100-s">
-          Creative Activists is het vervolgverhaal van <a
+      <section class="flex flex-column items-center w-100 ">
+        <div
+          id="wie"
+          class="flex flex-column items-center w-100 "
+        >
+          <h2>VOOR WIE?</h2>
+          <p class="w-80-l w-100-m w-100">
+            <span class="bold">Creatieve freelancers</span> vormen de kern van onze community, omdat we geloven in
+            nieuwe vormen van werken en tijdelijke teamstructuren. We geloven in creativiteit als multi-inzetbare skill
+            van de toekomst. De term ‘creativiteit’ is dan ook ruim interpreteerbaar, nooit beperkend.</p>
+          <p class="w-80-l w-100-m w-100">
+            Onze creatieve profielen variëren van studioprofielen als graphic designers, art directors, copywriters en
+            communicatieexperts tot bredere profielen als game designers, gedragsontwerpers, stadsontwikkelaars en
+            presentatoren.Wat ons bindt is ons gezamenlijk doel: sociale impact maken, met en voor klanten die hetzelfde
+            nastreven.
+
+          </p>
+        </div>
+      </section>
+
+
+      <section class="colorOne flex flex-column items-center w-100 ">
+        <div
+          id="waarom"
+          class="flex flex-column items-center w-100 "
+        >
+          <h2>WAAROM NU?</h2>
+          <p class="w-80 w-100-m w-100-s">
+            Creative Activists is het vervolgverhaal van <a
+              class="link underline-hover"
+              href="https://wearetribe.be/"
+              target="_blank"
+            >We Are Tribe</a>, waarmee we de opzet van ons eigen collectief gelijktijdig willen bewaken én openstellen
+            voor andere geïnteresseerden. We starten het platform eerst op in <span class="bold">Vlaanderen</span>, maar
+            werken samen met <span class="bold">Europese</span> en <span class="bold">internationale partners</span> als
+            <a
+              class="link underline-hover"
+              href="https://online.unschools.co/courses/disrupt-design-gang"
+              target="_blank"
+            >The Disruptive Design Gang</a>, <a
+              class="link underline-hover"
+              href="https://www.plusacumen.org/"
+              target="_blank"
+            >+Acumen</a> en anderen om onze lokale en globale impact te vergroten.
+
+          </p>
+        </div>
+      </section>
+
+
+      <section class=" flex flex-column items-center w-100 ">
+        <div
+          id="waar"
+          class="flex flex-column items-center w-100 "
+        >
+          <h2>WAAR STAAN WE AL?</h2>
+          <p class="w-80 w-100-m w-100-s">
+            <span class="italic">We practice what we preach</span>. En dus betrekken we jullie van begin af aan bij ons
+            project. Het voortraject en
+            vooronderzoek zijn opgestart, we stuurden een vragenlijst uit naar meer dan 100 creatieve freelancers en
+            bouwen
+            intussen aan het eerste prototype van het platform. We willen zo snel mogelijk een eerste versie lanceren en
+            bouwen
+            het platform daarna samen verder uit.
+
+          </p>
+        </div>
+      </section>
+
+      <footer class="w-100 flex justify-between">
+        <p class="pa0">Meer info: <a
+            class="link underline-hover"
+            href="mailto:lien@creativeactivists.eu"
+          >lien@creativeactivists.eu</a></p>
+        <p class="pa0">Powered by <a
             class="link underline-hover"
             href="https://wearetribe.be/"
             target="_blank"
-          >We Are Tribe</a>, waarmee we de opzet van ons eigen collectief gelijktijdig willen bewaken én openstellen
-          voor andere geïnteresseerden. We starten het platform eerst op in <span class="bold">Vlaanderen</span>, maar
-          werken samen met <span class="bold">Europese</span> en <span class="bold">internationale partners</span> als
-          <a
-            class="link underline-hover"
-            href="https://online.unschools.co/courses/disrupt-design-gang"
-            target="_blank"
-          >The Disruptive Design Gang</a>, <a
-            class="link underline-hover"
-            href="https://www.plusacumen.org/"
-            target="_blank"
-          >+Acumen</a> en anderen om onze lokale en globale impact te vergroten.
+          >We Are Tribe</a></p>
+      </footer>
 
-        </p>
-      </div>
-    </section>
-
-
-    <section class=" flex flex-column items-center w-100 ">
-      <div
-        id="waar"
-        class="flex flex-column items-center w-100 "
-      >
-        <h2>WAAR STAAN WE AL?</h2>
-        <p class="w-80 w-100-m w-100-s">
-          <span class="italic">We practice what we preach</span>. En dus betrekken we jullie van begin af aan bij ons
-          project. Het voortraject en
-          vooronderzoek zijn opgestart, we stuurden een vragenlijst uit naar meer dan 100 creatieve freelancers en
-          bouwen
-          intussen aan het eerste prototype van het platform. We willen zo snel mogelijk een eerste versie lanceren en
-          bouwen
-          het platform daarna samen verder uit.
-
-        </p>
-      </div>
-    </section>
-
-    <footer class="w-100 flex justify-between">
-      <p class="pa0">Meer info: <a
-          class="link underline-hover"
-          href="mailto:lien@creativeactivists.eu"
-        >lien@creativeactivists.eu</a></p>
-      <p class="pa0">Powered by <a
-          class="link underline-hover"
-          href="https://wearetribe.be/"
-          target="_blank"
-        >We Are Tribe</a></p>
-    </footer>
-
-
+    </div>
   </div>
 </body>
 
