not even a change

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
           <h1>we are <span>Creative Activists</span></h1>
         </div>
         <div class="w-100 pa3 mt2 flex flex-column items-center w-100">
-          <p class="w-80-l w-100-m w-100">
+          <p
+            class="w-100"
+            style="text-align: center"
+          >
             Een (inter)nationaal platform voor <span class="bold">creatieve freelancers</span> die een <span
               class="bold"
             >positieve(re) impact</span> willen hebben met hun werk. Een <span class="bold">deeltjesversneller</span>
